--- a/opa.css
+++ b/opa.css
@@ -1,91 +1,105 @@
 body {
-    font-size: 15pt;
-    background-image:url('/images2/Anime Background.jpg');
-    background-repeat:no-repeat;
-    background-size:cover;
-    color:white;
-    font-style: italic;
-    font-family:'Times New Roman', Times, serif;
-    text-align: center;
+  font-size: 15pt;
+  background-image:url('/images2/Anime Background.jpg');
+  background-repeat:no-repeat;
+  background-size:cover;
+  color:white;
+  font-style: italic;
+  font-family:'Times New Roman', Times, serif;
+  text-align: center;
 }    
 #A{
-  background-image:url("/images2/InShot_20240102_173009324.gif#6C96FF");
-  background-repeat:no-repeat ;
-  background-size:cover ;
-  border: 1px dotted black;
-  border-radius:5px;
+background-image:url("/images2/InShot_20240102_173009324.gif#6C96FF");
+background-repeat:no-repeat ;
+background-size:cover ;
+border: 1px double black;
+border-radius:5px;
 }
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color:#6C96FF;
+list-style-type: none;
+margin: 0;
+padding: 0;
+overflow: hidden;
+background-color:#6C96FF;
 }
 
 li {
-  float: left;
+float: left;
 }
 
 li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+display: block;
+color: white;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
 }
 
 li a:hover {
-  background-color: #111
+background-color:white;
 }
 /* CSS for Class A  */
 .A {
-  border: 2px solid white;
-  background-color: #6CB3FFA8;
-  width: 97%;
-  height: 24vh;
-  margin-top: 2%;
-  margin-left: 1%;
-  margin-right:2%;
-  display: grid;
-  grid-template-columns:6fr 6fr;
-  
+border: 2px solid white;
+background-color: #6CB3FFA8;
+width: 100%;
+height: 100%;
+margin-top: 2%;
+margin-left: 1%;
+margin-right:1%;
+display: grid;
+grid-template-columns:6fr 6fr;
+
 }
 #b{
-  width:64%;
-  margin-right:68%;
-  margin-top:3%;
-  margin-left:5%;
-  align-items: center;
+width:64%;
+margin-right:68%;
+margin-top:3%;
+margin-left:5%;
+align-items: center;
 
 }
 #aot{
-  text-align: justify;
-  margin-right:5%;
+text-align: justify;
+margin-right:5%;
 }
 /*Css for class C*/
 .C{
-  border:2px solid white;
-  background-color:#6CB3FFA8;
-  width: 97%;
-  height: 24vh;
-  margin-top:2%;
-  margin-left:1%;
-  margin-right:2%;
-  display:grid;
-  grid-template-columns:6fr 6fr;
+border:2px solid white;
+background-color:#6CB3FFA8;
+width: 100%;
+height: 100%;
+margin-top:2%;
+margin-left:1%;
+margin-right:1%;
+display:grid;
+grid-template-columns:6fr 6fr;
 }
 #bc{
-  width:64%;
-  margin-left:23%;
-  margin-top: 3%;
+width:64%;
+margin-left:23%;
+margin-top: 3%;
 }
 #boc{
-  text-align: justify;
-  margin-left: 5%;
+text-align: justify;
+margin-left: 5%;
 }
 /*Footer......*/
 #C{
-    background-color:#6C96FF;
-    margin-top:2%;
+  background-color:#6C96FF;
+  margin-top:2%;
+}
+#go {
+background-color: #6C96FF;
+}
+@media (max-width:924px){
+#aot{
+  font-size: 5pt;
+}
+#boc{
+  font-size:5pt;
+}
+#names{
+  font-size: 10pt;
+}
 }
