--- a/homepage.css
+++ b/homepage.css
@@ -1,6 +1,6 @@
 body {
   font-size: 15pt;
-  background-image:url('/images2/Anime Background.jpg');
+  background-image:url('images2/Anime Background.jpg');
   background-repeat:no-repeat;
   background-size:cover;
   color:white;
@@ -10,7 +10,7 @@ body {
   
 }
 #A{
-background-image:url("/images2/InShot_20240102_173009324.gif");
+background-image:url("images2/InShot_20240102_173009324.gif");
 background-repeat:no-repeat ;
 background-size:cover ;
 color: white;
